--- a/backend/.vscode/settings.json
+++ b/backend/.vscode/settings.json
@@ -6,4 +6,12 @@
   "editor.codeActionsOnSave": {
     "source.organizeImports": true,
   },
+  "workbench.colorCustomizations": {
+    "[*]": {
+      "editorIndentGuide.activeBackground1": "#dc13ff",
+      "editorIndentGuide.background1": "#e4d86a"
+    },
+    "minimap.background": "#00000000",
+    "scrollbar.shadow": "#00000000"
+  },
 }
